--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "pypi-requirements",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --prod",
+    "build:prod": "ng build --prod --deploy-url=/pypi-requirements/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
