--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pypi-requirements",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,11 +21,14 @@
     "@angular/material": "8.2.3",
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
+    "@angular/pwa": "0.803.14",
     "@angular/router": "~8.2.8",
-    "ace-builds": "1.4.6",
+    "@angular/service-worker": "~8.2.8",
+    "ace-builds": "1.4.7",
     "angular-split": "3.0.2",
     "brace": "0.11.1",
-    "ng2-ace-editor": "0.3.9",
+    "ng2-ace-editor": "git+https://github.com/quanghd96/ng2-ace-editor.git",
+    "ngx-clipboard": "12.2.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
