--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,10 +10,13 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "node_modules/ng2-ace-editor/*.ts",
+    "node_modules/ng2-ace-editor/src/*.ts"
   ],
   "exclude": [
     "src/test.ts",
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "node_modules/ng2-ace-editor/dist"
   ]
 }
