--- a/angular.json
+++ b/angular.json
@@ -29,11 +29,11 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/ace-diff/dist/ace-diff-dark.min.css",
               "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/ace-builds/src-min/ace.js"
             ]
           },
           "configurations": {
