--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pypi-requirements",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -25,7 +25,7 @@
     "@angular/router": "~8.2.8",
     "@angular/service-worker": "~8.2.8",
     "ace-builds": "1.4.7",
-    "angular-split": "3.0.2",
+    "ace-diff": "2.3.0",
     "brace": "0.11.1",
     "ng2-ace-editor": "git+https://github.com/quanghd96/ng2-ace-editor.git",
     "ngx-clipboard": "12.2.1",
