--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.8",
+    "@angular/animations": "~8.2.14",
     "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.8",
-    "@angular/compiler": "~8.2.8",
-    "@angular/core": "~8.2.8",
-    "@angular/forms": "~8.2.8",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
     "@angular/material": "8.2.3",
-    "@angular/platform-browser": "~8.2.8",
-    "@angular/platform-browser-dynamic": "~8.2.8",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/pwa": "0.803.14",
-    "@angular/router": "~8.2.8",
-    "@angular/service-worker": "~8.2.8",
+    "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
     "ace-builds": "1.4.7",
     "ace-diff": "2.3.0",
     "brace": "0.11.1",
@@ -34,10 +34,13 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.5",
-    "@angular/cli": "~8.3.6",
-    "@angular/compiler-cli": "~8.2.8",
-    "@angular/language-service": "~8.2.8",
+    "@angular-devkit/build-angular": "0.803.25",
+    "@angular-devkit/core": "9.0.4",
+    "@angular-devkit/schematics": "9.0.4",
+    "@angular/cli": "~8.3.25",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@schematics/angular": "9.0.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
