--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,7 +10,7 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.ts",
+    "src/**/*.d.ts",
     "node_modules/ng2-ace-editor/*.ts",
     "node_modules/ng2-ace-editor/src/*.ts"
   ],
