--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.4",
-    "@angular/cdk": "~9.1.0",
-    "@angular/common": "~9.0.4",
-    "@angular/compiler": "~9.0.4",
-    "@angular/core": "~9.0.4",
-    "@angular/forms": "~9.0.4",
+    "@angular/animations": "9.0.6",
+    "@angular/cdk": "9.1.3",
+    "@angular/common": "9.0.6",
+    "@angular/compiler": "9.0.6",
+    "@angular/core": "9.0.6",
+    "@angular/forms": "9.0.6",
     "@angular/material": "9.1.0",
-    "@angular/platform-browser": "~9.0.4",
-    "@angular/platform-browser-dynamic": "~9.0.4",
-    "@angular/router": "~9.0.4",
-    "@angular/service-worker": "~9.0.4",
+    "@angular/platform-browser": "9.0.6",
+    "@angular/platform-browser-dynamic": "9.0.6",
+    "@angular/router": "9.0.6",
+    "@angular/service-worker": "9.0.6",
     "ace-builds": "1.4.8",
     "ace-diff": "2.3.0",
     "brace": "0.11.1",
@@ -30,28 +30,32 @@
     "ngx-clipboard": "13.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.4",
-    "@angular/cli": "~9.0.4",
-    "@angular/compiler-cli": "~9.0.4",
-    "@angular/language-service": "~9.0.4",
-    "@types/jasmine": "~3.3.8",
+    "@angular-devkit/build-angular": "0.900.6",
+    "@angular/cli": "9.0.6",
+    "@angular/compiler-cli": "9.0.6",
+    "@angular/language-service": "9.0.6",
+    "@types/jasmine": "3.5.9",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "12.12.30",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "minimist": "1.2.5",
     "protractor": "~5.4.0",
     "serialize-javascript": "2.1.1",
-    "ts-node": "~7.0.0",
+    "ts-node": "8.7.0",
     "tslint": "~5.15.0",
     "typescript": "~3.7.5"
+  },
+  "resolutions": {
+    "minimist": "^1.2.5"
   }
 }
