--- a/package.json
+++ b/package.json
@@ -55,9 +55,12 @@
     "typescript": "~3.7.5"
   },
   "resolutions": {
+    "elliptic": "^6.5.4",
+    "ini": "^1.3.6",
     "minimist": "^1.2.5",
     "node-forge": ">=0.10.0",
     "serialize-javascript": ">=3.1.0",
+    "socket.io": "^2.4.0",
     "yargs-parser": ">=13.1.2"
   }
 }
